[package]
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "A meta linting system."
homepage = "https://github.com/getsentry/calm"
keywords = ["calm", "lint"]
license = "BSD-3-Clause"
name = "calm"
readme = "README.md"
version = "0.1.0"

[dependencies]
console = "0.5.0"
crossbeam = "0.2.10"
difflib = "0.2.0"
dotenv = "0.10.0"
elementtree = "0.5.0"
error-chain = "0.10.0"
git2 = "0.6.6"
glob = "0.2.11"
if_chain = "0.1.2"
indicatif = "0.6.0"
itertools = "0.6.0"
lazy_static = "0.2.8"
notify = "4.0.1"
parking_lot = "0.4.4"
regex = "0.2.2"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
sha1 = "0.2.0"
tempfile = "2.1.5"
walkdir = "1.0.7"
which = "1.0.2"

[dependencies.clap]
default-features = false
features = ["suggestions", "wrap_help"]
version = "2.25.0"

[replace]

[replace."difflib:0.2.0"]
git = "https://github.com/mitsuhiko/difflib"
rev = "76384c2568a927c6b864a3b4be52d66cc7127cca"
